# GLAutoLab

./: .gitignore  README.md  pyproject.toml
bev/: compute_ipm.py
bev/camera_configs/: drone.yaml  front.yaml  right.yaml
chechDataset/: mask_image.py  skeletonModule.py  skeleton_image.py
refineLidarCamera/: CameraLidarModule.py  LidarCameraRefine.py  carModelModule.py  hdmap_export.json  imgui.ini  labelManager.py  liveModule.py  rot_sdv_1.glb  shaderModules.py
refineLidarCamera/camera_configs/: LidartoCam1.yaml  cam1_intrinsic.yaml
refineLidarCamera/camera_configs (Copy)/: LidartoCam0_refined.yaml  LidartoCam1_refined.yaml
refineLidarCamera/camera_configs_mar6/: LidartoCam1.yaml  cam1_intrinsic.yaml
refineLidarCamera/camera_configs_mar6-2/: LidartoCam1.yaml
refineLidarCamera/camera_configs_mar6-3/: LidartoCam1.yaml
refineLidarCamera/camera_configs_marz/: LidartoCam0.yaml  LidartoCam0_refined.yaml  LidartoCam1_refined.yaml
skeleton_detection/: CameraLidarModule.py  LidarCameraRefine.py  LidarFloorRemover.py  ModelsGBLModule.py  UlitysModule.py  hdMapIO.py  imgui.ini  labelManager.py  opengl.py
skeleton_detection/camera_configs_mar6-3/: LidartoCam2.yaml
skeleton_detection/camera_configs_marz/: rosConfig.yaml
vizModule/: CameraLidarModule.py  CameraModule.py  LidarCameraRefine.py  PathRendererModule.py  UlitysModule.py  dataLoaderModule.py  function.txt  hdMapIO.py  hdmap_export.json  imgui.ini  ipmModule.py  openglModule_v2.py  pcdLoaderModule.py  personDetectionModule.py  poseManager.py  shaderModules.py
vizModule/camera_configs/: cam1.yaml  (+3 more)
(+2 files in other folders)
